[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "senditark_api"
version = '0.0.1'
description = "API backend for senditark"
authors = ["bobrock <bobrock@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/barretobrock/senditark-backend'
packages = [
    { include = 'senditark_api' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.11"
pukr = { git = "https://github.com/barretobrock/pukr.git", branch = "main" }
gunicorn = "^21"
loguru = "^0"
Flask = "^3"
Flask-SQLAlchemy = "^2"
pandas = "^2"
requests = "^2"
sqlalchemy = "^2"
# Optional dependencies would go down here
# example = { version = ">=1.7.0", optional = true }

[tool.poetry.dev-dependencies]
pre-commit = "^3"
pytest = "^7"
pytest-cov = "^4"
flake8 = "^6"
tox = "^4"

[tool.poetry.extras]
test = ["pytest"]

[tool.isort]
profile = 'black'
force_grid_wrap = 2
force_sort_within_sections = true
skip_gitignore = true
skip_glob = ['*_pb2.py', '*_pb2_grpc.py']
